# testturn

./: .gitignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt
scripts/: eval.py  train.py
src/toxicity_transformer/: __init__.py  data.py  model.py  train.py  utils.py
tests/: test_smoke.py
toxicity_transformer/data/: collate.py  dataset.py  tokenizer.py
toxicity_transformer/models/: transformer.py
toxicity_transformer/training/: distributed.py  metrics.py  trainer.py
