[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-transformer"
version = "0.1.0"
description = "Custom lightweight Transformer for Civil Comments toxicity classification."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
  "datasets>=2.16",
  "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["toxicity_transformer*"]
