[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-transformer"
version = "0.1.0"
description = "Small pre-LN Transformer for Civil Comments toxicity classification (target>=0.5)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "torch>=2.1",
  "transformers>=4.38",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
toxicity-train = "toxicity_transformer.train:main"
